--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 class="title">Tic <span>Tac</span> Toe</h1>
         <div class="status-action">
             <div class="status"><span id="winningYou"></span> - <span id="winningPc"></span></div>
-            <div id="reset" class="reset" onclick="run()">Reset</div>
+            <div id="reset" class="reset">Reset</div>
         </div>
         <div class="game-grid">
             <div id="0" class="game-cell 1"></div>
